# learning-python

./: main.py  pyproject.toml  pyright_file.py  ruff.py
src/: main.py
src/click_library/: main.py
src/conditionalExpression/: main.py
src/dataTypes/: README.md  main.py
src/decorators/: main.py
src/getterAndSetter/: main.py
src/json_module/: data.json  main.py
src/loops/: main.py
src/oops/: main.py
src/operationsAndExpressions/: README.md
src/request/: main.py
src/shutil/: main.py
src/slicing/: main.py
src/streamlit_library/: main.py  pyproject.toml
src/variables/: README.md
